package Behavioral.Strategy.Classes;

import Behavioral.Strategy.Interface.DriveStrategy;

public class Vehicle {
    
    DriveStrategy driveStrategy;

    public Vehicle(DriveStrategy driveStrategy){
        this.driveStrategy = driveStrategy;
    }

    public void drive(){
        driveStrategy.drive();
    }
}
