package Behavioral.Strategy.Interface;

public interface DriveStrategy{
    public void drive();
}